# meta_face

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/rq-dashboard/: Dockerfile
notebooks/: 01_annotate_overview.ipynb  02_face_crops_buffered.ipynb  README.md
plans/: detectron2-backend-support.md  dlib-face-recognition-backend.md  facial-analysis-tools-integration.md  meta-face-pipeline.md
src/meta_face/: __init__.py  analysis_models.py  annotate.py  cli.py  config.py  deps.py  imaging.py  jobs.py  models.py  queue.py  scanner.py  sidecar.py  worker.py
src/meta_face/backends/: __init__.py  base.py  detectron2_backend.py  insightface_backend.py  registry.py
src/meta_face/tools/: __init__.py  arcface.py  cluster.py  dlib_detect.py  dlib_embed.py  face_record.py  registry.py  scrfd.py
src/meta_face/tools/analysis/: __init__.py  base.py  bisenet.py  crops.py  deepface.py  emonet.py  emotiefflib.py  face_anti_spoofing.py  face_antispoof_onnx.py  fairface.py  fer_plus.py  inspireface.py  l2cs_net.py  libreface.py  mediapipe_blendshapes.py  opencv_fer.py  openface3.py  py_feat.py  registry.py  runner.py  uniface.py  yakhyo_gaze.py
tests/: test_analysis_registry.py  test_annotate.py  test_backends.py  test_cluster_paths.py  test_dlib_records.py  test_face_record.py  test_registry.py  test_sidecar_merge.py
