[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-face"
version = "0.1.0"
description = "Multi-tool face detection pipeline writing results to sidecar-rs .scar files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "meta_face contributors" }]
dependencies = [
    "click>=8.1",
    "rq>=2.0",
    "redis>=5.0",
    "insightface>=0.7.3",
    "face_recognition>=1.3.0",
    "onnxruntime-gpu>=1.17",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "hdbscan>=0.8.33",
    "faiss-gpu-cu12>=1.8.0",
    "pillow>=10.0",
    "pillow-heif>=0.16",
    "sidecar-rs @ git+https://github.com/dapperfu/sidecar-rs.git@v0.2.1",
    "tqdm>=4.66",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipython>=8.0",
    "ipykernel>=6.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "seaborn>=0.13",
]

[project.scripts]
meta-face = "meta_face.cli:main"
mf = "meta_face.cli:main"

[project.optional-dependencies]
detectron2 = [
    "torch>=2.1",
    "torchvision>=0.16",
]
emotion = [
    "emotiefflib>=1.1.1",
    "torch>=2.1",
]
expression = [
    "emotiefflib>=1.1.1",
    "mediapipe>=0.10.14",
    "py-feat>=0.6",
    "torch>=2.1",
]
gaze = [
    "l2cs-nnet>=0.0.5",
    "onnxruntime-gpu>=1.17",
]
attributes = [
    "deepface>=0.0.93",
    "tf-keras>=2.16",
]
liveness = [
    "onnxruntime-gpu>=1.17",
]
all-tools = [
    "emotiefflib>=1.1.1",
    "mediapipe>=0.10.14",
    "py-feat>=0.6",
    "l2cs-nnet>=0.0.5",
    "deepface>=0.0.93",
    "tf-keras>=2.16",
    "torch>=2.1",
    "torchvision>=0.16",
]
all = [
    "meta-face[detectron2,emotion,expression,gaze,attributes,liveness,dev]",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/meta_face"]

[tool.hatch.build.targets.sdist]
only-include = ["src/meta_face", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"
